--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,117 @@ h1{
 #button1:focus {
   background-color: #344e45;
 }
+#button2{
+    display: inline-block;
+    background-color: #283F37;
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #f5f2f2;
+  cursor: pointer;
+  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  line-height: 20px;
+  list-style: none;
+  margin: 0;
+  outline: none;
+  padding: 10px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: color 100ms;
+  vertical-align: baseline;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  
+}
+
+
+/* CSS */
+
+
+#button2:hover,
+#button2:focus {
+  background-color: #344e45;
+}
+
+#button3{
+    display: inline-block;
+    background-color: #283F37;
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #f5f2f2;
+  cursor: pointer;
+  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  line-height: 20px;
+  list-style: none;
+  margin: 0;
+  outline: none;
+  padding: 10px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: color 100ms;
+  vertical-align: baseline;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  
+}
+
+
+/* CSS */
+
+
+#button3:hover,
+#button3:focus {
+  background-color: #344e45;
+}
+
+#button4{
+    display: inline-block;
+    background-color: #283F37;
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #f5f2f2;
+  cursor: pointer;
+  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  line-height: 20px;
+  list-style: none;
+  margin: 0;
+  outline: none;
+  padding: 10px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: color 100ms;
+  vertical-align: baseline;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  
+}
+
+
+/* CSS */
+
+
+#button4:hover,
+#button4:focus {
+  background-color: #344e45;
+}
+
 
 #shirt{
     position: absolute;
@@ -181,4 +292,57 @@ h1{
     position: absolute;
     top: 0;
     right: 10%;
+}
+
+#rightend{
+    display: inline-block;
+}
+#div7{
+    background-color: #FFF;
+    width: 1060px;
+    height: 300px;
+    padding-top: 50px;
+    padding-left: 5%;
+    border-radius: 25px;
+    padding: 50px;
+    margin: 20px;
+    display:inline-block;
+    position: relative;
+}
+
+#button5{
+    display: inline-block;
+    background-color: #4ce8b2;
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #f5f2f2;
+  cursor: pointer;
+  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  line-height: 20px;
+  list-style: none;
+  margin: 0;
+  outline: none;
+  padding: 10px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: color 100ms;
+  vertical-align: baseline;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  
+}
+
+
+/* CSS */
+
+
+#button5:hover,
+#button5:focus {
+  background-color: #74f1c5;
 }
